SERVER-78167 Make sure analyzeShardKey command always throws an error when the collection becomes empty during the command

(cherry picked from commit 05cb8dd2bba6db13e4f08fc93d07f5ae97c876a2)